Fix nav+pic overlapping/ pic wrapping / add footer / correct comments

--- a/styles.css
+++ b/styles.css
@@ -19,7 +19,6 @@ h1 {
 
 h1, h2, h3, h4, h5, h6 {
   line-height: 1.2;
-  text-decoration: underline;
 }
 
 hr{
@@ -35,31 +34,35 @@ display: flex;
 flex-flow: row wrap;
 justify-content: flex-start;
 align-items: center;
-gap: 50px;
+gap: 1px;
 }
 
 .child-head-name {
 border: 1px solid none;
-flex: 1;
+flex-grow: 2;
 }
 
 .child-head-nav {
 border: 1px solid none;
+gap: 50px;
+flex-grow: 1;
 }
 
 .main-nav {
     border: 1px solid none;
-    height: 50px;
     padding: 4px;
     display: flex;
-    gap: 50px;
-    align-items: center;
-    flex-flow: row wrap;
+    gap: 10px;
+    flex-wrap: wrap;
+    justify-content: flex-start;
+    align-items: center; 
+    align-content: center;
 }
 
 .main-nav > * {
+  border: 1px solid none;
   flex-grow: 1;
-  flex-basis: 0%;
+  flex-basis: 0;
 }
 
 .button {
@@ -68,15 +71,16 @@ border: 1px solid none;
   border-radius: 4px;
   color: rgb(201, 170, 226);
   box-shadow: 5px 4px 6px rgba(29, 3, 53, 0.8); 
+  text-align: center;
 }
 
 #coverimg {
   border-radius: 30px 190px 80px 190px;
   box-shadow: 0px 0px 30px 1px;
   display: flex;
-  margin-left: auto;
-  margin-right: auto;
-  width: auto;
+  margin: auto;
+  width: 100%;
+  height: auto;
 }
 
 figcaption {
@@ -110,11 +114,13 @@ img {
 
 .no-bullets {
 list-style-type: none; 
+margin: 4px 10px;
 }
 
 .buttontext {
-  background-color: rgba(176, 146, 201, 0.7);
+  background-color: rgba(164, 130, 192, 0.7);
   padding: 1px 10px;
+  margin: 5px;
   border-radius: 5px;
   color: rgb(98, 58, 131);
   border: 1px solid none;
@@ -132,16 +138,15 @@ list-style-type: none;
 
 .child-contactadr{
   border: 1px solid none;
-  gap: ;
 }
 
 .container-address {
   border: 1px solid none;
-  gap: 50px;
+  gap: 10px;
   padding: 4px;
   display: flex;
   flex-flow: row wrap;
-  justify-content: space-between;
+  justify-content: center;
   align-items: center;
   align-content: center;
 }
@@ -156,13 +161,15 @@ list-style-type: none;
   padding: 4px;
   display: flex;
   flex-flow: row wrap;
-  justify-content: space-between;
+  justify-content: center;
   align-items: center;
   align-content: center;
 }
 
 .child-contactmed{
   border: 1px solid none;
+  width: 100%;
+  height: auto;
 }
 
 .inline {
@@ -195,4 +202,21 @@ a[href^="tel"]::before {
 .abio-bio {
   border: 1px solid none;
   flex: 2;
+}
+
+.table-left{
+  text-align: left;
+  vertical-align: text-top;
+  font-size: 90%;
+}
+
+.table-right{
+  text-align: right;
+  vertical-align: text-top;
+  font-size: 90%;
+}
+
+footer {
+  text-align: center;
+  margin: 2rem 4rem;
 }
